@@ -2,17 +2,30 @@ Still TODO Before Complete for PHP
 ----------------------------------
 
 Port:
-  - Hamcrest_Xml_*
-  - Hamcrest_Collection_* as Hamcrest_Array_*
+
+  - Hamcrest_Collection_*
+    - IsCollectionWithSize
+    - IsEmptyCollection
+    - IsIn
+    - IsTraversableContainingInAnyOrder
+    - IsTraversableContainingInOrder
+    - IsMapContaining (aliases)
+
+Generate hamcrest.php:
+
+  - Use docblock @hamcrest-factory annotation to generate hamcrest.php from classes.
 
 Aliasing/Deprecation (questionable):
-  - Some official hamcrest matchers start with "is" where IMHO, they shouldn't
+
+  - Some official hamcrest matchers start with "is" where IMHO, they shouldn't.
       * e.g. assertThat($a, isEmptyString())
-  - Deprecate this version and allow hamcrest to be used the way it should be:
+
+  - Deprecate this version and allow hamcrest to be used the way it should:
       * assertThat($a, is(emptyString()))
       * assertThat($a, not(emptyString()))
       * assertThat($a, is(not(emptyString())))
 
 Namespaces:
+
   - Investigate adding PHP 5.3+ namespace support in a way that still permits
     use in PHP 5.2.
